# Intra

./: .clang-format  .gitignore  .travis.yml  CMakeCommon.txt  CMakeLists.txt  CMakeSettings.json  Configurations.cmake  LICENSE  MusicSynthesizer.psess  MusicSynthesizer160927.vspx  ReadMe.md  SetupMSVC.bat  Solution.sln  cpp.hint  experimental.clang-format
Audio/: CMakeLists.txt  IntraAudio.vcxproj  IntraAudio.vcxproj.filters
Audio/src/: IntraAudio.cc
Bin2C/: Bin2C.vcxproj  CMakeLists.txt  main.cpp
Core/: CMakeLists.txt  IntraCore.vcxproj  IntraCore.vcxproj.filters
Core/include/: Algo.hh  Async.hh  Containers.hh  IO.hh  IntraCore.hh  Math.hh  Memory.hh  Meta.hh  Platform.hh  Range.hh  Test.hh  Thread.hh  Utils.hh
Core/natvis/: Containers.natvis  Core.natvis  Data.natvis  Endianess.natvis  IO.natvis  Range.natvis  RangeConstruction.natvis  Utils.natvis
Core/src/: CMakeFileList.txt  IntraCore.cc
Demos/Bin2C/: Bin2C.vcxproj  CMakeLists.txt  main.cpp
Demos/MusicSynthesizer/: ADSR.cpp  ADSR.h  CMakeLists.txt  Chorus.cpp  Chorus.h  DrumPhysicalModel.cpp  DrumPhysicalModel.h  EmscriptenInterface.cpp  Envelope.h  ExponentialAttenuation.cpp  ExponentialAttenuation.h  Filter.cpp  Filter.h  FixedRateTask.h  Generators.hh  Instrument.h  InstrumentLibrary.cpp  InstrumentLibrary.h  InstrumentSet.cpp  InstrumentSet.h  MidiInstrumentMapping.cpp  MidiInstrumentMapping.h  MidiSynth.cpp  MidiSynth.h  MusicSynthesizer.cpp  MusicSynthesizer.vcxproj  MusicSynthesizer.vcxproj.filters  MusicSynthesizerCommon.cpp  MusicSynthesizerCommon.h  MusicalInstrument.cpp  MusicalInstrument.h  NormalRateTask.h  NoteSampler.cpp  NoteSampler.h  Octaves.cpp  Octaves.h  PostEffects.cpp  PostEffects.hh  RecordedSampler.cpp  RecordedSampler.h  (+15 more)
Demos/Tests/: CMakeLists.txt  Tests.vcxproj  Tests.vcxproj.filters
Demos/UnitTests/: CMakeLists.txt  TestFileSyncIO.txt  UnitTests.filters  UnitTests.vcxproj  UnitTests.vcxproj.filters
Image/: CMakeLists.txt  IntraImage.vcxproj  IntraImage.vcxproj.filters
Image/include/: Font.hh  Image.hh  IntraImage.hh
Image/natvis/: Image.natvis
Image/src/: IntraImage.cc
Intra/: Audio.hh  CMakeLists.txt  CMakeLists1.txt  Container.hh  Cpp.hh  Data.hh  IO.hh  Intra.natstepfilter  Intra.vcxproj  Intra.vcxproj.filters  Math.hh  Memory.hh  Meta.hh  Platform.hh  Preprocessor.hh  Range.hh  Stream.hh  System.hh  Test.hh  Utils.hh  cpp.hint
Intra/Audio/: AudioBuffer.cpp  AudioBuffer.h  AudioProcessing.cpp  AudioProcessing.h  AudioSource.cpp  AudioSource.h  CMakeLists.txt  Midi.cpp  Midi.h  Music.cpp  Music.h  MusicNote.cpp  MusicNote.h  Resample.cpp  Resample.h  SampleConversion.cpp  SampleConversion.h  Sound.cpp  Sound.h  SoundApi.h  SoundDriverInfo.cpp  SoundDriverInfo.h  SoundTypes.h  Sound_ALSA.cpp  Sound_DirectSound.cpp  Sound_Dummy.cpp  Sound_Emscripten.cpp  Sound_OpenAL.cpp  Sources.hh
Intra/Concepts/: Array.h  Container.h  IInput.h  IOutput.h  Iterator.h  Range.h  RangeOf.h
Intra/Concurrency/: Atomic.h  CMakeLists.txt  Concurrency.natvis  CondVar.cpp  CondVar.h  Job.cpp  Job.h  Lock.h  Mutex.cpp  Mutex.h  Synchronized.h  Thread.cpp  Thread.h
Intra/Container/: AllForwardDecls.h  Associative.hh  Container.natvis  ForwardDecls.h
Intra/Core/: Assert.h  CArray.h  CContainer.h  CIterator.h  Core.h  Core.natvis  EachField.h  Float.h  Functional.h  GloballyRegistered.h  Numeric.h  Operations.h  Optional.h  Polymorphic.h  Preprocessor.h  ReadMe.md  Reflection.h  TList.h  Tuple.h  Type.h
Intra/Cpp/: CMakeLists.txt  Compatibility.h  Cpp.natvis  Endianess.h  Features.h  Fundamental.h  InfNan.h  InitializerList.h  Intrinsics.h  PlacementNew.h  PlatformDetect.h  Runtime.cpp  Runtime.h  SharedLib.h  Warnings.h
Intra/Data/: BinarySerialization.cpp  Object.h  Reflection.h  Serialization.hh  ValueType.cpp  ValueType.h  Variable.cpp  Variable.h
Intra/Font/: CMakeLists.txt  FontLoading.cpp  FontLoading.h  FontLoadingDeclarations.h  FontLoading_STB.cpp
Intra/Funal/: Bind.h  Delegate.h  Funal.natvis  FuncRef.h  Functor.h  Method.h  ObjectMethod.h  Op.h  ValueRef.h
Intra/Hash/: Murmur.cpp  Murmur.h  MurmurCT.h  StringHash.h  ToHash.h  Types.h
Intra/IO/: CMakeLists.txt  CompositeFormattedWriter.cpp  CompositeFormattedWriter.h  ConsoleInput.cpp  ConsoleInput.h  ConsoleOutput.cpp  ConsoleOutput.h  FileMapping.cpp  FileMapping.h  FilePath.cpp  FilePath.h  FileReader.h  FileSystem.cpp  FileSystem.h  FileWriter.h  FormattedLogger.cpp  FormattedLogger.h  FormattedWriter.h  Formatter.h  HtmlWriter.cpp  HtmlWriter.h  IO.natvis  LogSystem.h  Networking.cpp  Networking.h  OsFile.cpp  OsFile.h  ReferenceFormattedWriter.cpp  Socket.cpp  Socket.h  SocketReader.h  SocketWriter.h  Std.cpp  Std.h
Intra/Image/: AnyImage.cpp  AnyImage.h  FormatConversion.cpp  FormatConversion.h  Image.natvis  ImageFormat.cpp  ImageFormat.h  ImageInfo.cpp  ImageInfo.h  Loaders.hh
Intra/Math/: Bit.h  ExponentRange.h  FFT.cpp  FFT.h  Fixed.h  FixedPoint.h  Geometry.hh  HalfFloat.h  Math.h  Math.natvis  Matrix3.h  Matrix4.h  Quaternion.h  ShaderMath.h  Shapes.h  SineRange.h  Vector2.h  Vector3.h  Vector4.h
Intra/Memory/: Align.h  Allocator.hh  Memory.cpp  Memory.h  VirtualMemory.cpp  VirtualMemory.h
Intra/Meta/: CMakeLists.txt  EachField.h  GetField.h  Meta.natvis  Operators.h  Pair.h  Tuple.h  Type.h  TypeList.h
Intra/Platform/: Environment.cpp  Environment.h  HardwareInfo.cpp  HardwareInfo.h  Signal.cpp  Signal.h  Time.cpp  Time.h
Intra/Preprocessor/: Macro2ForEach.h  Macro2ForEachIndex.h  Operations.h  VariadicCommon.h
Intra/Random/: FastUniform.h  FastUniformNoise.h
Intra/Range/: Comparison.hh  Compositors.hh  ForEach.h  ForwardDecls.h  Generators.hh  Iterator.hh  Mutation.hh  Operations.h  Range.natvis  RangePolymorphic.natvis  ReadMe.md  Reduction.h  (+7 more)
IntraLib/: CMakeLists.txt  IntraLib.vcxproj  IntraLib.vcxproj.filters
MusicSynthesizer/: CMakeLists.txt  MusicSynthesizer.cpp  MusicSynthesizer.vcxproj  MusicSynthesizer.vcxproj.filters  MusicSynthesizerCommon.cpp  MusicSynthesizerCommon.h
PerfTesting/: CMakeLists.txt  PerfTesting.vcxproj  PerfTesting.vcxproj.filters
src/: CMakeLists.txt
(+2351 files in other folders)
