cmake_minimum_required(VERSION 2.8)

if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
option(LIBRARY_FONT_LOADING_STB "Use STB_TrueType" ON)
else()
option(LIBRARY_FONT_LOADING_STB "Use STB_TrueType" OFF)
endif()

find_package(Freetype)
if(FREETYPE_FOUND)
if(UNIX)
option(LIBRARY_FONT_LOADING_FreeType "Use FreeType" ON)
else()
option(LIBRARY_FONT_LOADING_FreeType "Use FreeType" OFF)
endif()
endif()

if(LIBRARY_FONT_LOADING_FreeType)
add_definitions(-DINTRA_LIBRARY_FONT_LOADING=INTRA_LIBRARY_FONT_LOADING_FreeType)
include_directories(${FREETYPE_INCLUDE_DIRS})
target_link_libraries(Intra ${FREETYPE_LIBRARIES})
elseif(LIBRARY_FONT_LOADING_STB)
add_definitions(-DINTRA_LIBRARY_FONT_LOADING=INTRA_LIBRARY_FONT_LOADING_STB)
else()
add_definitions(-DINTRA_LIBRARY_FONT_LOADING=INTRA_LIBRARY_FONT_LOADING_Dummy)
endif()
